# IMU_GY-91-in-Schoolsat_Framework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FindCatch2.cmake  Findfmt.cmake  README.md  conanbuildinfo.txt  conaninfo.txt  graph_info.json
core/: AOutfile.cpp  AProcessManager.cpp  CMakeLists.txt  ECommandServer.cpp
core/experiment/: Xdds.cpp  Xshared_memory_r.cpp  Xshared_memory_w.cpp  Xtest1.cpp  Xtest2.cpp  XtestMain.cpp
include/: CCommand.hpp  CConfig.hpp  CDataPool.hpp  CExecutor.hpp  CLog.hpp  CMqueue.hpp  ITTC.hpp
src/: AGNC.cpp  AIMU.cpp  CMakeLists.txt
